# i2ros_project

./: .gitattributes  .gitignore  readme.md
project/: .gitattributes  .gitignore
project/.catkin_tools/profiles/default/: config.yaml
project/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
project/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.fish  local_setup.sh  setup.sh
project/devel/.private/control/: .catkin
project/devel/.private/control_package/: .catkin  setup.fish  setup.sh
project/devel/.private/decision_making/: .catkin  .rosinstall  local_setup.fish  setup.sh
project/devel/.private/dummy_controller/: .catkin  .rosinstall  local_setup.fish
project/devel/.private/msg_interfaces/: .catkin  local_setup.fish  local_setup.sh  setup.fish  setup.sh
project/devel/.private/perception/: .catkin  _setup_util.py  setup.fish  setup.sh
project/devel/.private/planning/: .catkin  local_setup.sh  setup.fish  setup.sh
project/devel/.private/planning_package/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.sh
project/devel/.private/simulation/: .catkin  .rosinstall  setup.fish
project/devel/.private/start/: .catkin  .rosinstall  setup.fish
project/devel/include/libsocket/: dgramclient.hpp  dgramoverstream.hpp  epoll.hpp  exception.hpp  framing.hpp  inetbase.hpp  inetclientdgram.hpp  inetclientstream.hpp  inetdgram.hpp  inetserverdgram.hpp  inetserverstream.hpp  libinetsocket.h  libunixsocket.h  select.hpp  socket.hpp  streamclient.hpp  unixbase.hpp  unixclientdgram.hpp  unixclientstream.hpp  unixdgram.hpp  unixserverdgram.hpp  unixserverstream.hpp
project/devel/include/msg_interfaces/: Trajectory.h
project/devel/include/simulation/: VehicleControl.h
project/devel/lib/control_package/: control_node
project/devel/lib/decision_making/: decision_node
project/devel/lib/dummy_controller/: dummy_controller_node
project/devel/lib/perception/: depth_to_cloud_node  front_hazard_node  map_builder_node  mock_traffic_light_publisher  traffic_light_node
project/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  control.pc  control_package.pc  decision_making.pc  dummy_controller.pc  msg_interfaces.pc  perception.pc  planning.pc  planning_package.pc  simulation.pc  start.pc
project/devel/lib/planning/: mock_trajectory_publisher
project/devel/lib/planning_package/: planning_node  trajectory_visualizer
project/devel/lib/simulation/: JSON_param_reader  ROS_command_transmitter  unity_TCP_stream_receiver
project/install/include/simulation/: VehicleControl.h
project/install/lib/control_package/: control_node
project/install/lib/pkgconfig/: catkin_tools_prebuild.pc  perception.pc  planning_package.pc  simulation.pc
project/install/lib/planning_package/: planning_node  trajectory_visualizer
project/install/share/control_package/: control.launch
project/launch/: all.launch
project/logs/control/: build.cmake.000.log.stderr
project/logs/control_package/: build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.022.log.stderr  build.make.029.log.stderr
project/logs/msg_interfaces/: build.check.001.log.stderr  build.check.003.log.stderr
project/logs/perception/: build.make.003.log.stderr  build.make.004.log.stderr  build.make.007.log.stderr
project/logs/planning_package/: build.check.001.log.stderr  build.make.009.log.stderr  build.make.011.log.stderr
project/logs/simulation/: build.make.000.log.stderr
project/principle_docs/: interfaces.md
project/src/: README.md  setup_script.sh
project/src/control/: CMakeLists.txt
project/src/control_package/: CMakeLists.txt  package.xml
project/src/control_package/config/: control_params.yaml
project/src/control_package/launch/: control.launch
project/src/control_package/src/: control_node.cpp
project/src/decision_making/: CMakeLists.txt  package.xml
project/src/decision_making/launch/: decision.launch
project/src/decision_making/src/: decision_node.cpp
project/src/dummy_controller/: CMakeLists.txt
project/src/dummy_controller/src/: dummy_controller_node.cpp
project/src/msg_interfaces/: CMakeLists.txt
project/src/perception/: CMakeLists.txt  package.xml
project/src/perception/launch/: front_hazard.launch  map_builder.launch  perception.launch  traffic_light.launch
project/src/perception/src/: depth_to_cloud_node.cpp  front_hazard_node.cpp  map_builder_node.cpp  mock_traffic_light_publisher.cpp  traffic_light_node.cpp
project/src/planning/: CMakeLists.txt
project/src/planning_package/: CMakeLists.txt  README.md  package.xml
project/src/planning_package/config/: planning_viz.rviz  waypoints.json
project/src/planning_package/launch/: planning.launch
project/src/planning_package/scripts/: trajectory_node.py
project/src/planning_package/src/: planning_node.cpp  trajectory_visualizer.cpp
project/src/simulation/: CMakeLists.txt  README.md  package.xml
project/src/simulation/launch/: simulation.launch  simulation_demo.launch  simulation_no_Unity.launch
project/src/simulation/msg/: VehicleControl.msg
project/src/simulation/rviz/: visualization.rviz
project/src/simulation/scripts/: run_unity.sh
project/src/simulation/src/: JSON_param_reader.cpp  ROS_command_transmitter.cpp  imu_parser.h  rgb_camera_parser.h  true_state_parser.h  unity_TCP_stream_receiver.cpp
project/src/simulation/test_scripts/: message_decoders.py  tcp_receiver.py  udp_dummy_client.py  udp_dummy_server.py
project/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
project/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/Resources/: unity_builtin_extra
project/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/StreamingAssets/: simulation_config.json
project/src/start/: CMakeLists.txt  package.xml
(+129 files in other folders)
