<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception package for autonomous driving project</description>

  <maintainer email="your_email@tum.de">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- General dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- PCL -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Image and Camera -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>

  <!-- TF -->
  <depend>tf2_ros</depend>

  <!-- OctoMap -->
  <depend>octomap</depend>
</package>

